--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "g": "^2.0.1",
+    "json-server": "^1.0.0-beta.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "^3.4.3"
   }
 }
